<resources>
    <string name="app_name">Juegos Jhon</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="reiniciar">Reinciar</string>
    <string name="jugar">Jugar</string>
    <string name="salir">Salir</string>

    <string name="un_jugador">1 Jugador</string>
    <string name="dos_jugadores">2 Jugadores</string>
    <string name="facil">Facil</string>
    <string name="normal">Normal</string>
    <string name="imposible">Imposible</string>
    <string name="casilla">Casilla</string>
    <string name="circulos_ganan">¡Circulos Ganan!</string>
    <string name="equis_ganan">¡Cruces Ganan!</string>
    <string name="empate">¡Empate!</string>

    <string name="dificultad">Elija el level inicial:</string>

    <string name="medio">Normal</string>
    <string name="dificil">Dificil</string>
    <string name="ayuda">Ayuda</string>
    <string name="texto_ayuda">
        El objetivo del juego es evitar que la pelota caiga al suelo, tocando la pelota con el dedo \n\n
        para empujar la pelota en una dirección concreta, pulsaremos en la pantalla en la dirección \n\n
        contraria.
        \n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n
        Ánimo !!!!!

    </string>
    <string name="volver">Regresar</string>
</resources>